refactor(connector): connect automatically without pairing code
